arreglo de registro

--- a/ingresar.html
+++ b/ingresar.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<body class="BodyLogin">
     <header>
         <a class="header-A" href="index.html">Inicio</a>
         <a class="header-A" href="error.html">Series</a>
         <a class="header-A" href="error.html">Peliculas</a>
+        <a class="header-A" href="registro.html">Registrarme</a>
         
     </header>
     <main>
@@ -20,8 +21,8 @@
             <label for="">Contraseña</label><br>
             <input type="password" name="" id=""><br>
             <button type="submit">Ingresar</button><br>
-            <a href="">¿Olvidaste tu contraseña?</a><br>
-            <a href="">Registrate!</a>
+            <a href="error.html">¿Olvidaste tu contraseña?</a><br>
+            <a href="registro.html">Registrate!</a>
         </form>
     </main>
 
