--- a/servicios.html
+++ b/servicios.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <a class="header-A" href="">Inicio</a>
-        <a class="header-A" href="">Series</a>
-        <a class="header-A" href="">Peliculas</a>
-        <a class="header-A" href="">Ingresar</a>
+        <a class="header-A" href="index.html">Inicio</a>
+        <a class="header-A" href="error.html">Series</a>
+        <a class="header-A" href="error.html">Peliculas</a>
+        <a class="header-A" href="ingresar.html">Ingresar</a>
     </header>
     <iframe width="100%" height="400px" 
     src="https://www.youtube.com/embed/Y5fbyh_xPXo?start=3&autoplay=1&mute=1" 
